Ingress.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: ingress-bugbash
  name: echo
spec:
  selector:
    matchLabels:
      app: echo
  replicas: 5
  template:
    metadata:
      labels:
        app: echo
    spec:
      containers:
        - name: app
          image: gcr.io/google_containers/echoserver:1.4
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  namespace: ingress-bugbash
  name: echo
spec:
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
  type: NodePort
  selector:
    app: echo
