ingress-app2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: ingress-bugbash
  name: game-2048
spec:
  selector:
    matchLabels:
      app: game-2048
  replicas: 5
  template:
    metadata:
      labels:
        app: game-2048
    spec:
      containers:
        - name: app
          image: alexwhen/docker-2048
          imagePullPolicy: Always
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  namespace: ingress-bugbash
  name: game-2048
spec:
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
  type: NodePort
  selector:
    app: game-2048
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  namespace: ingress-bugbash
  name: game-2048
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/group.name: echo2048
    alb.ingress.kubernetes.io/group.order: '2'
spec:
  rules:
    - http:
        paths:
          - path: /*
            backend:
              serviceName: game-2048
              servicePort: 80
